Fixed bottom bar link to sidebar issue, cleaned sidebar style. The account info is missing on mobile view, and it's not triggering sidbar.

--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -30,7 +30,7 @@
   color: #9b9b9b;
 }
 
-/* line 17, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -52,46 +52,46 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
+/* line 116, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
 
@@ -160,12 +160,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /* line 39, ../sass/partials/_sidebar.scss */
 #accountBalance .label {
   display: inline-block;
-  color: #696969;
+  color: #9b9b9b;
   font-size: 12px;
+  font-weight: 100;
   width: 100px;
 }
 
-/* line 41, ../sass/partials/_sidebar.scss */
+/* line 46, ../sass/partials/_sidebar.scss */
 .hlite {
   background: #efefef;
   border: 1px solid #bdc7d8;
@@ -175,14 +176,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   font-size: 12px;
 }
 
-/* line 50, ../sass/partials/_sidebar.scss */
+/* line 55, ../sass/partials/_sidebar.scss */
 .sidebar-item {
   font-size: 12px;
   float: left;
   width: 100%;
 }
 
-/* line 57, ../sass/partials/_sidebar.scss */
+/* line 62, ../sass/partials/_sidebar.scss */
 .item-text {
   float: left;
   margin-left: 8px;
@@ -195,8 +196,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* line 6, ../sass/partials/_dish.scss */
 .ui .card {
-  -webkit-box-shadow: 0 0.1em 0.3em 0 #d4d4d5;
   -moz-box-shadow: 0 0.1em 0.3em 0 #d4d4d5;
+  -webkit-box-shadow: 0 0.1em 0.3em 0 #d4d4d5;
   box-shadow: 0 0.1em 0.3em 0 #d4d4d5;
 }
 
@@ -275,7 +276,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 #page .card .content .ui.button {
   font-size: 0.7rem;
 }
-/* line 71, ../sass/partials/_dish.scss */
+/* line 70, ../sass/partials/_dish.scss */
 #page .ui.pointing.secondary.menu
 .item {
   color: #9b9b9b;
